--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     </section>
     <section class="projectLinkSection" id='projects'>
         <h2>check out some of my</h2>
+        <h1>WORK</h1>
         <div class='projectAllLinksWrapper'>
-            <div class='projectLinkWrapper'><a class='projectSectionLink yosmitePark' href="#yosemite">yosemite park guide</a></div>
-            <div class='projectLinkWrapper'><a class='projectSectionLink farmToTable' href="#farm">farm to table</a></div>
-            <div class='projectLinkWrapper'><a class='projectSectionLink webSprint' href="#javascript">javascript web sprint</a></div>
+            <div class='projectLinkWrapper'><a class='bttn yosmitePark' href="#yosemite">yosemite park guide</a></div>
+            <div class='projectLinkWrapper'><a class='bttn farmToTable' href="#farm">farm to table</a></div>
+            <div class='projectLinkWrapper'><a class='bttn webSprint' href="#javascript">javascript web sprint</a></div>
         </div>
     </section>
 
