--- a/index.html
+++ b/index.html
@@ -9,10 +9,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Work+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/87f2974b26.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="animationContainer">
+
+        <div class="cirContainer">
+            <svg class="cir" style="width: 90px;" viewBox="0 0 90 90" xmlns="http://www.w3.org/2000/svg">
+                  <circle id="c" fill="none" stroke-width="3.5" stroke-linecap="round" stroke="white" cx="45" cy="45" r="43" />
+              </svg>
+        </div>
+
+        <div class="square">
+            <div class="segment"></div>
+            <div class="segment hor"></div>
+            <div class="segment"></div>
+            <div class="segment hor"></div>
+        </div>
+
+        <div class="box">
+            <div class="text">g</div>
+            <div class="text">b</div>
+            <div class="text">e</div>
+        </div>
+
+    </div>
     <a id="top"></a>
     <nav>
         <div class='logoWrapper'><img class='navLogo' src="assets/Type Logo White.svg" /></div>
@@ -21,7 +44,7 @@
             <div class='navLinkWrapper'><a class='navLink aboutLink' href="#">about</a></div>
             <div class='navLinkWrapper'><a class='navLink contactLink' href="#">contact</a></div>
         </div>
-        <div class="burger"></div>
+        <di class="burger"></di>
     </nav>
     <section class="splash">
         <div class='splashWrapper'>
